--- a/css/game.css
+++ b/css/game.css
@@ -25,6 +25,13 @@
 	bottom: 30px;
 	z-index: 3;
 }
+#goalkeeper-shadow
+{
+	position: absolute;
+	left: 245px;
+	top: 98px;
+	z-index: 1;
+}
 #goalkeeper
 {
 	position: absolute;
